--- a/Postcard/Base.lproj/Main.storyboard
+++ b/Postcard/Base.lproj/Main.storyboard
@@ -61,6 +61,15 @@
                                     <rect key="frame" x="16" y="72" width="324" height="89"/>
                                 </variation>
                             </label>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Us7-Vg-7OZ">
+                                <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="16" y="179" width="216" height="31"/>
+                                </variation>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <variation key="default">
@@ -70,6 +79,7 @@
                                 <exclude reference="mR5-wR-S35"/>
                                 <exclude reference="lQJ-0p-CMW"/>
                                 <exclude reference="TI9-YY-PCD"/>
+                                <exclude reference="Us7-Vg-7OZ"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -79,6 +89,7 @@
                                 <include reference="mR5-wR-S35"/>
                                 <include reference="lQJ-0p-CMW"/>
                                 <include reference="TI9-YY-PCD"/>
+                                <include reference="Us7-Vg-7OZ"/>
                             </mask>
                         </variation>
                     </view>
@@ -87,6 +98,7 @@
                         <outlet property="enterNameTextField" destination="M59-qw-NaX" id="X2r-3P-1NQ"/>
                         <outlet property="mailButton" destination="lQJ-0p-CMW" id="jMn-CF-I6a"/>
                         <outlet property="messageLabel" destination="TI9-YY-PCD" id="qZB-zm-KBt"/>
+                        <outlet property="nameLabel" destination="Us7-Vg-7OZ" id="zbX-p1-Lwl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -102,6 +114,7 @@
                         <viewControllerLayoutGuide type="bottom" id="21n-mV-fZ2"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="OnU-fk-KaV">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SagradaFamilia.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="kr1-uz-UMg">
